@@ -1,3 +1,7 @@
+2009-05-26
+    * Dialogs: help "WhatIsThis?" strings, layouts
+    * updated spanish translation  
+
 2009-05-25
     * Import Sound Font Instruments
 
